--- a/projects/cashmere-examples/tsconfig.lib.json
+++ b/projects/cashmere-examples/tsconfig.lib.json
@@ -14,7 +14,7 @@
         "types": [],
         "lib": ["dom", "es2015"],
         "paths": {
-            "@healthcatalyst/cashmere": ["./dist/cashmere"]
+            "@wcf-insurance/cashmere": ["./dist/cashmere"]
         }
     },
     "angularCompilerOptions": {
