--- a/projects/cashmere/package.json
+++ b/projects/cashmere/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@healthcatalyst/cashmere",
+    "name": "@wcf-insurance/cashmere",
     "version": "0.0.0-development",
     "license": "Apache-2.0",
     "description": "Reusable Health Catalyst Components",
